turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:4: error: not enough arguments for constructor Array: (_length: Int)Array[Int].
Unspecified value parameter _length.
var triplet = new Array[Int]
              ^